Fix issue where captain text can cause page jump

--- a/src/components/shared/Caption.css
+++ b/src/components/shared/Caption.css
@@ -4,7 +4,7 @@
  *
  * Author   : Tomiko
  * Created  : Jul 09, 2020
- * Updated  : Jul 09, 2020
+ * Updated  : Jul 12, 2020
  */
 
 div.CaptionContainer {
@@ -21,6 +21,10 @@ div.IconContainer {
 }
 
 p.CaptionText {
+  /** Specify a height to make sure variable content
+   * does not cause layout size change (i.e., page jump).
+   */
+  height: 36px;
   text-align: left;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 14px;
